Fixed layout bugs in Chrome (tool buttons breaking line when the chrome has a small width), updated build files.
git-svn-id: http://fbug.googlecode.com/svn/lite@4922 e969d3be-0e28-0410-a27f-dd5c76401a8b

--- a/branches/firebug1.3/skin/xp/firebug.css
+++ b/branches/firebug1.3/skin/xp/firebug.css
@@ -823,6 +823,7 @@
     padding-left: 3px;
     background: #fafafa;
     border: 1px inset #fff;
+    width: 220px;
 }
 
 .Selector { margin-top:10px }
@@ -846,6 +847,8 @@
 
 .fbToolbarButtons {
     display: none;
+    position: absolute;
+    top: 4px;
 }
 
 #fbStatusBarBox {
@@ -1042,6 +1045,7 @@ body {
 #fbToolbarButtons {
     float: left;
     padding: 4px 2px 0 5px;
+    position: absolute;
 }
 
 #fbToolbarButtons a {
